--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,7 +134,7 @@ a {
     color: black;
     font-size: 15px;
     margin: 0;
-    
+
 }
 
 
@@ -238,3 +238,50 @@ a {
     top: -25px;
     align-content: center;
 }
+
+.H3Styl {
+    font-size: 40px;
+    font-family: kalameh;
+    color: #004087;
+}
+
+.PstylMBL {
+    color: #004087;
+    font-size: 20px;
+    font-family: vazir;
+}
+
+.PstylMBL2 {
+    padding: 5px;
+    color: white;
+    font-size: 10px;
+    font-family: vazir;
+    font-weight: lighter;
+    margin: 0;
+}
+
+.bgStylMBL {
+    padding: 6px 0 6px 0;
+    background-color: background:background: rgb(5, 75, 186);
+    background: linear-gradient(90deg, rgba(5, 75, 186, 1) 15%, rgba(3, 68, 244, 1) 53%, rgba(3, 12, 255, 1) 100%);
+    
+    width: 20%;
+    border-radius: 20px;
+}
+.pstyl5{
+margin: 0;
+color: #1943D9;
+font-size: 30px;
+font-family: vazir;
+}
+.pstyl6{
+    margin: 0;
+   color: #004087;
+    font-size: 13px;
+    font-family: vazir;
+    }
+    .H3styl2{
+        font-size: 30px;
+        font-weight: bolder;
+font-family: kalameh;
+    }
